--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  riverpod: ^3.0.0
+  google_fonts: ^6.3.1
+  dio: ^5.9.0
+  get_it: ^8.2.0
+  skeletonizer: ^2.1.0+1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
